package Model;

public enum Direction {
    TOP,
    RIGHT,
    BOTTOM,
    LEFT
}
