package Model;

public interface PlayerObserver {
    void updatePosition(Position newPosition);
}
