package Model;

public class TileLine extends Tile{
    public TileLine(){}

    public int getType(){
        return 1;
    }

    public String affichage(){
        return "-";
    }
}
