package Model;

public enum TypeTile {
    T,
    ANGLE,
    LINE
}
